# netdiagram

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: cli-usage.md  installation.md  mcp-integration.md  mcp-llm-workflow.md
docs/superpowers/plans/: 2026-04-14-network-diagram-phase1-mvp.md  2026-04-15-advanced-layout.md  2026-04-15-d2-renderer.md  2026-04-15-label-collision.md  2026-04-15-mcp-server.md
docs/superpowers/specs/: 2026-04-14-network-diagram-design.md
examples/: mlag-fabric.d2  mlag-fabric.drawio  mlag-fabric.yaml  small-office.d2  small-office.drawio  small-office.yaml
src/netdiagram/: __init__.py  cli.py  mcp_server.py
src/netdiagram/ir/: __init__.py  loader.py  models.py  schema.py
src/netdiagram/layout/: __init__.py  dimensions.py  engine.py  labels.py  overlap.py  placement.py  routing.py  topology.py  types.py
src/netdiagram/renderers/: __init__.py  base.py  d2.py  drawio.py
tests/: test_cli.py  test_end_to_end.py  test_ir_loader.py  test_ir_models.py  test_ir_schema.py  test_layout_dimensions.py  test_layout_engine.py  test_layout_labels.py  test_layout_overlap.py  test_layout_placement.py  test_layout_routing.py  test_layout_topology.py  test_mcp_integration.py  test_mcp_server.py  test_renderer_d2.py  test_renderer_drawio.py
tests/fixtures/: branch_office.yaml  invalid_missing_node.yaml  simple_two_nodes.yaml
